--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,42 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+
+    <!-- ================================== bishoy_ui's styles ==================================-->
+    <style name="quiz_regular">
+        <item name="android:fontFamily">@font/rubik</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/quizTextColor</item>
+    </style>
+
+    <style name="quiz_subtitle">
+        <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:background">@drawable/regular_text_background</item>
+        <item name="android:textColor">@color/quizTextColor</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:elevation">12dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="answer_hint_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:elevation">12dp</item>
+        <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">#0e1028</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 
 </resources>
