--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,16 @@
 
 
     <!-- ================================== bishoy_ui's styles ==================================-->
-    <style name="quiz_regular">
+    <style name="quiz_regular_titles">
         <item name="android:fontFamily">@font/rubik</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/quizTextColor</item>
+    </style>
+
+    <style name="quiz_regular_text">
+        <item name="android:fontFamily">@font/rubik</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/quizTextColor</item>
     </style>
 
@@ -22,7 +28,10 @@
         <item name="android:textStyle">normal</item>
         <item name="android:background">@drawable/regular_text_background</item>
         <item name="android:textColor">@color/quizTextColor</item>
-        <item name="android:padding">4dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:elevation">12dp</item>
         <item name="android:textAlignment">center</item>
     </style>
