--- a/app/src/main/res/layout/custom_ratingbar_layout.xml
+++ b/app/src/main/res/layout/custom_ratingbar_layout.xml
@@ -1,41 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/progressOne_textView"
-        android:layout_width="32dp"
-        android:layout_height="8dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/custom_ratebar_item_empty" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/lesson1_layout">
 
-    <TextView
-        android:id="@+id/progressTwo_textView"
-        android:layout_width="32dp"
-        android:layout_height="8dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/custom_ratebar_item_empty" />
+        <TextView
+            android:id="@+id/progressOne_textView"
+            android:layout_width="32dp"
+            android:layout_height="8dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/custom_ratebar_item_empty" />
 
-    <TextView
-        android:id="@+id/progressThree_textView"
-        android:layout_width="32dp"
-        android:layout_height="8dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/custom_ratebar_item_empty" />
+        <TextView
+            android:id="@+id/progressTwo_textView"
+            android:layout_width="32dp"
+            android:layout_height="8dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/custom_ratebar_item_empty" />
 
-    <TextView
-        android:id="@+id/progressFour_textView"
-        android:layout_width="32dp"
-        android:layout_height="8dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/custom_ratebar_item_empty" />
+        <TextView
+            android:id="@+id/progressThree_textView"
+            android:layout_width="32dp"
+            android:layout_height="8dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/custom_ratebar_item_empty" />
 
-    <TextView
-        android:id="@+id/progressFive_textView"
-        android:layout_width="32dp"
-        android:layout_height="8dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/custom_ratebar_item_empty" />
+        <TextView
+            android:id="@+id/progressFour_textView"
+            android:layout_width="32dp"
+            android:layout_height="8dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/custom_ratebar_item_empty" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/progressFive_textView"
+            android:layout_width="32dp"
+            android:layout_height="8dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/custom_ratebar_item_empty" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
