--- a/app/src/main/res/layout/fragment_refrence.xml
+++ b/app/src/main/res/layout/fragment_refrence.xml
@@ -91,6 +91,16 @@
             app:layout_constraintStart_toStartOf="@id/progressImage_imageView"
             app:layout_constraintTop_toBottomOf="@id/progressImage_imageView" />
 
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10.5dp"
+            android:layout_marginLeft="4dp"
+            android:background="@drawable/checked"
+            app:layout_constraintBottom_toBottomOf="@+id/lessonSubtitle_textView"
+            app:layout_constraintStart_toEndOf="@+id/lessonSubtitle_textView"
+            app:layout_constraintTop_toTopOf="@+id/lessonSubtitle_textView" />
+
         <LinearLayout
             android:id="@+id/lesson1_layout"
             android:layout_width="wrap_content"
@@ -142,30 +152,31 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@mipmap/ic_launcher"
-            app:layout_constraintTop_toTopOf="@id/guidelineStartVideo"
             app:layout_constraintBottom_toBottomOf="@id/guidelineEndVideo"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/guidelineStartVideo" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@android:color/white"
-            app:layout_constraintTop_toTopOf="@id/guidelineEndVideo"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guidelineEndVideo" />
 
         <TextView
             android:id="@+id/lessonTitle_textView"
-            android:text="Introduction"
-            android:layout_marginTop="16dp"
-            android:elevation="2dp"
             style="@style/quiz_regular_titles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/guidelineEndVideo"
-            app:layout_constraintStart_toStartOf="@id/guidelineStart" />
+            android:layout_marginTop="16dp"
+            android:elevation="2dp"
+            android:text="Introduction"
+            app:layout_constraintStart_toStartOf="@id/guidelineStart"
+            app:layout_constraintTop_toBottomOf="@id/guidelineEndVideo" />
+
         <Button
             android:id="@+id/next_btn5"
             android:layout_width="35dp"
@@ -175,24 +186,25 @@
             app:layout_constraintBottom_toTopOf="@+id/guidelineStartVideo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lessonProgress_parent" />
+
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             android:background="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/lessonTitle_textView"
-            app:layout_constraintStart_toStartOf="@id/guidelineStart"
+            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
             app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom">
+            app:layout_constraintStart_toStartOf="@id/guidelineStart"
+            app:layout_constraintTop_toBottomOf="@id/lessonTitle_textView">
+
             <TextView
                 android:id="@+id/lessonText_textView"
-                android:layout_width="wrap_content"
                 style="@style/quiz_regular_text"
-                android:text="The first building block of emotional intelligence is self-awareness. Self-awareness is our ability to recognize our own emotions and their effects on us and others. Without being aware of and understanding our own emotions, it will be difficult for us to move into the other emotional competencies like self-management, social awareness, or team leadership.Self-improvement is also referred to as personal-development can be said as the improvement to one’s own mind and characterthrough one’s own efforts. It is a conscious process where one decides to take oneself in hand and change their life-for the better(introduction to self improvement)."
-                android:layout_height="wrap_content" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The first building block of emotional intelligence is self-awareness. Self-awareness is our ability to recognize our own emotions and their effects on us and others. Without being aware of and understanding our own emotions, it will be difficult for us to move into the other emotional competencies like self-management, social awareness, or team leadership.Self-improvement is also referred to as personal-development can be said as the improvement to one’s own mind and characterthrough one’s own efforts. It is a conscious process where one decides to take oneself in hand and change their life-for the better(introduction to self improvement)." />
 
         </ScrollView>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
