add viewmodels(profile,achievements) - repositeries(profile,achievements)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.leado.MainActivity">
+    tools:context="com.example.leado.MainActivityJ">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
