--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,24 @@
         android:id="@+id/navigation_home"
         android:name="com.example.leado.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_achievements_"
+            app:destination="@id/achievements_" />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.leado.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
+        android:id="@+id/achievements_"
+        android:name="com.example.leado.Achievements_"
+        android:label="fragment_achievements_"
+        tools:layout="@layout/fragment_achievements_" >
+        <action
+            android:id="@+id/action_achievements__to_profileFragment_"
+            app:destination="@id/profileFragment_" />
+    </fragment>
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.leado.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/profileFragment_"
+        android:name="com.example.leado.ProfileFragment_"
+        android:label="fragment_profile_"
+        tools:layout="@layout/fragment_profile_" />
 </navigation>
