--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,7 +9,8 @@
 
 
     <!-- ================================== bishoy_ui's styles ==================================-->
-    <style name="quiz_regular_titles">
+    <style
+        name="quiz_regular_titles">
         <item name="android:fontFamily">@font/rubik</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
