--- a/app/src/main/res/drawable/bluebackground.xml
+++ b/app/src/main/res/drawable/bluebackground.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:startColor="#d2fcfa"
-        android:endColor="#60ebe4"/>
+        android:endColor="#60ebe4"
+        android:angle="270"/>
 
 </shape>
