--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -46,6 +46,7 @@
             android:textSize="40sp" />
 
         <Button
+            android:id="@+id/getStartedBtn"
             android:layout_width="180dp"
             android:layout_height="60dp"
             android:layout_marginTop="50dp"
