--- a/app/src/main/res/layout/fragment_achievements_.xml
+++ b/app/src/main/res/layout/fragment_achievements_.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +8,9 @@
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#BAFCF5"
+        android:background="@drawable/bluebackground"
         tools:context="com.example.leado.Achievements">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -28,31 +26,28 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="1"           />
 
-        <ImageView
-            android:id="@+id/imageButton"
-            android:layout_width="30dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:background="#BAFCF5"
-            app:layout_constraintBottom_toTopOf="@+id/achievementsRecycler"
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#00DDDDDD"
+            android:scaleX="2"
+            android:scaleY="2"
+            android:src="@drawable/back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.111"
-            app:srcCompat="@drawable/back" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:text="Achievements"
             android:textColor="#100F0F"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/achievementsRecycler"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
             app:layout_constraintVertical_bias="0.157" />
 
         <TextView
