--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".HomeFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,7 +12,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
+    tools:context=".HomeFragment"
     android:background="@drawable/bg">
 
 
@@ -43,6 +43,7 @@
         app:layout_constraintVertical_bias="0.594" />
 
     <Button
+        android:id="@+id/selfAwarenessBtn"
         android:layout_width="151dp"
         android:layout_height="47dp"
         android:background="@drawable/rounded_corners"
