--- a/app/src/main/res/layout/self_awareness_item.xml
+++ b/app/src/main/res/layout/self_awareness_item.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Lesson" />
 
     <Button
-        android:id="@+id/ItemButton"
+        android:id="@+id/startButton"
         android:layout_width="155dp"
         android:layout_height="30dp"
         android:background="@drawable/start_button"
