--- a/app/src/main/res/layout/activity_congrats_screen.xml
+++ b/app/src/main/res/layout/activity_congrats_screen.xml
@@ -92,7 +92,7 @@
         android:scaleX="3"
         android:scaleY="3"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/AchievementsBtn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/AchievementsBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="#00FFFFFF"
