--- a/app/src/main/res/layout/fragment_achievements_.xml
+++ b/app/src/main/res/layout/fragment_achievements_.xml
@@ -27,7 +27,7 @@
             app:spanCount="1"           />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/achievementsbackbtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="#00DDDDDD"
@@ -47,7 +47,7 @@
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/achievementsRecycler"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
+            app:layout_constraintTop_toBottomOf="@+id/achievementsbackbtn"
             app:layout_constraintVertical_bias="0.157" />
 
         <TextView
