--- a/app/src/main/res/layout/activity_awareness_room.xml
+++ b/app/src/main/res/layout/activity_awareness_room.xml
@@ -100,7 +100,7 @@
 
 
     <TextView
-        android:id="@+id/supportSystem"
+        android:id="@+id/lesson1btn"
         android:layout_width="122.39dp"
         android:layout_height="23.39dp"
         android:layout_marginTop="14.19dp"
@@ -153,7 +153,7 @@
         android:background="@drawable/info"
         app:layout_constraintEnd_toStartOf="@+id/info3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/supportSystem" />
+        app:layout_constraintTop_toBottomOf="@+id/lesson1btn" />
 
     <ImageView
         android:id="@+id/info3"
