arrange classes in folders

--- a/app/src/main/res/layout/fragment_before_home_.xml
+++ b/app/src/main/res/layout/fragment_before_home_.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Before_home_">
+    tools:context=".startActivities.Before_home_">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
