--- a/app/src/main/res/layout/activity_fragment1_.xml
+++ b/app/src/main/res/layout/activity_fragment1_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment1_">
+    tools:context=".startActivities.Fragment1_">
     <fragment
         android:id="@+id/host_fragment1"
         android:name="androidx.navigation.fragment.NavHostFragment"
