--- a/app/src/main/res/layout/fragment_refrence.xml
+++ b/app/src/main/res/layout/fragment_refrence.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Refrence">
+    tools:context=".couseActivities.Refrence">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/quiz_background"
-        tools:context=".VideoActivity">
+        tools:context=".couseActivities.VideoActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineStart"
