--- a/app/src/main/res/layout/fragment_lesson4.xml
+++ b/app/src/main/res/layout/fragment_lesson4.xml
@@ -69,6 +69,16 @@
             app:layout_constraintStart_toStartOf="@id/guidelineStartUpper"
             app:layout_constraintTop_toTopOf="@id/guidelineTop" />
 
+        <Button
+            android:id="@+id/takeQuiz2"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#FFFFFF"
+            android:text="take Quiz 2"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineStartVideo"
+            app:layout_constraintEnd_toStartOf="@+id/next_btn4" />
         <TextView
             android:id="@+id/lessonName_textView"
             style="@style/quiz_regular_titles"
