--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,14 +7,46 @@
     tools:context=".buttonNavigationActivites.HomeFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".buttonNavigationActivites.HomeFragment"
-    android:background="@drawable/bg">
+    android:background="#d2fcfa">
 
+    <ImageView
+        android:id="@+id/maountains"
+        android:layout_width="300dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/maountains"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/mind_icon"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:background="@drawable/mind_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="271dp" />
+
+    <ImageView
+        android:id="@+id/self_awarness_icon"
+        android:layout_width="170dp"
+        android:layout_height="120dp"
+        android:background="@drawable/self_awarness_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/clouds"
+        android:layout_width="170dp"
+        android:layout_height="120dp"
+        android:background="@drawable/clouds"
+        app:layout_constraintEnd_toStartOf="@+id/self_awarness_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="465dp" />
 
     <Button
         android:id="@+id/personal_BrandingBtn"
