--- a/app/src/main/res/layout/fragment_profile_.xml
+++ b/app/src/main/res/layout/fragment_profile_.xml
@@ -45,12 +45,14 @@
                     android:src="@drawable/more" />
             </LinearLayout>
 
-            <ImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/whitebg"
-                />
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/profile_image"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/profile1"
+                app:civ_border_width="0dp"
+                app:civ_border_color="#FF000000"/>
 
             <TextView
                 android:layout_width="wrap_content"
