--- a/app/src/main/res/layout/fragment_quiz_2.xml
+++ b/app/src/main/res/layout/fragment_quiz_2.xml
@@ -268,6 +268,24 @@
             app:layout_constraintStart_toStartOf="@id/guidelineStartUpper"
             app:layout_constraintTop_toBottomOf="@id/guidelineQuizEnd" />
 
+        <ImageView
+            android:id="@+id/microphone"
+            android:layout_width="20dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/microphone"
+            app:layout_constraintBottom_toTopOf="@+id/quizQuestion_textView"
+            app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="20dp"
+            android:background="@drawable/group"
+            android:layout_marginRight="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/microphone"
+            app:layout_constraintEnd_toStartOf="@+id/microphone"
+            app:layout_constraintTop_toTopOf="@+id/microphone" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
