--- a/app/src/main/res/layout/fragment_achievements_.xml
+++ b/app/src/main/res/layout/fragment_achievements_.xml
@@ -24,7 +24,8 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="1.0"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="1"           />
+            app:spanCount="1"
+            android:layout_marginBottom="55dp"/>
 
         <ImageButton
             android:id="@+id/achievementsbackbtn"
