--- a/app/src/main/res/layout/fragment_before_home_.xml
+++ b/app/src/main/res/layout/fragment_before_home_.xml
@@ -158,7 +158,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.345" />
+                app:layout_constraintVertical_bias="0.345"
+                android:elevation="10dp"/>
 
             <Button
                 android:id="@+id/mindMappingBtnbfhome"
