--- a/app/src/main/res/layout/activity_congrats_screen.xml
+++ b/app/src/main/res/layout/activity_congrats_screen.xml
@@ -45,7 +45,7 @@
 
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/claim_Your_Gift"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
