--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/quiz_background"
-    tools:context=".couseActivities.VideoActivity">
+    tools:context=".couse1Activities.VideoActivity">
 
     <fragment
         android:id="@+id/host_fragment"
