--- a/app/src/main/res/layout/fragment_before_home_.xml
+++ b/app/src/main/res/layout/fragment_before_home_.xml
@@ -8,9 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".buttonNavigationActivites.HomeFragment">
@@ -27,6 +25,7 @@
                 android:layout_width="300dp"
                 android:layout_height="220dp"
                 android:layout_marginTop="44dp"
+                app:layout_constraintBottom_toTopOf="@+id/mind_icon"
                 android:background="@drawable/maountains"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.531"
@@ -48,12 +47,12 @@
                 android:id="@+id/lines3"
                 android:layout_width="220dp"
                 android:layout_height="90dp"
-                android:layout_marginTop="624dp"
                 android:background="@drawable/line3"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.018"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/self_awarness_icon" />
 
             <ImageView
                 android:id="@+id/tree"
@@ -73,10 +72,12 @@
                 android:layout_height="130dp"
                 android:layout_marginBottom="72dp"
                 android:background="@drawable/mind_icon"
+                android:layout_marginTop="30dp"
                 app:layout_constraintBottom_toTopOf="@+id/self_awarness_icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.418"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/maountains" />
 
             <ImageView
                 android:id="@+id/self_awarness_icon"
@@ -86,6 +87,7 @@
                 android:background="@drawable/self_awarness_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mind_icon"
                 app:layout_constraintHorizontal_bias="0.589"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -165,7 +167,7 @@
                 android:id="@+id/mindMappingBtnbfhome"
                 android:layout_width="169dp"
                 android:layout_height="58dp"
-                android:background="@drawable/rounded_corners"
+                android:background="@drawable/rounded_corner_locked"
                 android:text="Mind Mapping"
                 android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
