--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
             android:layout_height="220dp"
             android:layout_marginTop="44dp"
             android:background="@drawable/maountains"
+            app:layout_constraintBottom_toTopOf="@+id/mind_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.531"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,12 +40,12 @@
             android:id="@+id/lines3"
             android:layout_width="220dp"
             android:layout_height="90dp"
-            android:layout_marginTop="624dp"
             android:background="@drawable/line3"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.018"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/self_awarness_icon" />
 
         <ImageView
             android:id="@+id/tree"
@@ -64,10 +65,12 @@
             android:layout_height="130dp"
             android:layout_marginBottom="72dp"
             android:background="@drawable/mind_icon"
+            android:layout_marginTop="30dp"
             app:layout_constraintBottom_toTopOf="@+id/self_awarness_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.418"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/maountains" />
 
         <ImageView
             android:id="@+id/self_awarness_icon"
@@ -78,6 +81,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.589"
+            app:layout_constraintTop_toBottomOf="@+id/mind_icon"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
@@ -156,7 +160,7 @@
             android:id="@+id/mindMappingBtn"
             android:layout_width="169dp"
             android:layout_height="58dp"
-            android:background="@drawable/rounded_corners"
+            android:background="@drawable/rounded_corner_locked"
             android:text="Mind Mapping"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
