--- a/app/src/main/res/layout/fragment_lesson2.xml
+++ b/app/src/main/res/layout/fragment_lesson2.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".couseActivities.Lesson2">
+    tools:context=".couse1Activities.Lesson2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/quiz_background"
-        tools:context=".couseActivities.VideoActivity">
+        tools:context=".couse1Activities.VideoActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineStart"
@@ -75,7 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Lesson Name"
+            android:text="Examples self-awareness"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guidelineTop" />
@@ -87,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Lesson 2"
-            app:layout_constraintEnd_toStartOf="@id/lessonName_textView"
+            app:layout_constraintEnd_toStartOf="@+id/lesson1_layout"
             app:layout_constraintStart_toStartOf="@id/progressImage_imageView"
             app:layout_constraintTop_toBottomOf="@id/progressImage_imageView" />
 
