--- a/app/src/main/res/layout/fragment_lesson4.xml
+++ b/app/src/main/res/layout/fragment_lesson4.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".couseActivities.Lesson4">
+    tools:context=".couse1Activities.Lesson4">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/quiz_background"
-        tools:context=".couseActivities.VideoActivity">
+        tools:context=".couse1Activities.VideoActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineStart"
@@ -85,7 +85,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Lesson Name"
+            android:textSize="20sp"
+            android:paddingHorizontal="50dp"
+            android:textAlignment="center"
+            android:text="Improving your self-awareness"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guidelineTop" />
@@ -97,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Lesson 4"
-            app:layout_constraintEnd_toStartOf="@id/lessonName_textView"
+            app:layout_constraintEnd_toStartOf="@+id/lesson1_layout"
             app:layout_constraintStart_toStartOf="@id/progressImage_imageView"
             app:layout_constraintTop_toBottomOf="@id/progressImage_imageView" />
 
