--- a/app/src/main/res/layout/fragment_profile_.xml
+++ b/app/src/main/res/layout/fragment_profile_.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/profile"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,6 +57,7 @@
                 app:civ_border_color="#FF000000"/>
 
             <TextView
+                android:id="@+id/prof_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -71,7 +74,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/line1"
+            android:id="@+id/prof_courses"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingHorizontal="60dp"
@@ -87,22 +90,22 @@
             android:id="@+id/prof_points"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="200"
+            android:text="0"
             android:textSize="20sp"
             android:textColor="#000000"
-            android:paddingHorizontal="50dp"
-            app:layout_constraintEnd_toStartOf="@id/line3"
-            app:layout_constraintStart_toEndOf="@id/line1"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toStartOf="@id/prof_rank"
+            app:layout_constraintStart_toEndOf="@id/prof_courses"
             app:layout_constraintTop_toBottomOf="@id/layout11" />
 
         <TextView
-            android:id="@+id/line3"
+            android:id="@+id/prof_rank"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="11"
             android:textColor="#000000"
             android:textSize="20sp"
-            android:paddingHorizontal="55dp"
+           android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/prof_points"
             app:layout_constraintTop_toBottomOf="@+id/layout11" />
@@ -115,9 +118,9 @@
             android:text="courses"
             android:textColor="#000000"
             android:textSize="16sp"
-            android:paddingHorizontal="40dp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toStartOf="@id/line5"
-            app:layout_constraintTop_toBottomOf="@id/line1"/>
+            app:layout_constraintTop_toBottomOf="@id/prof_courses"/>
 
         <TextView
             android:id="@+id/line5"
@@ -126,7 +129,7 @@
             android:textColor="#000000"
             android:text="points"
             android:textSize="16sp"
-            android:paddingHorizontal="45dp"
+            android:textAlignment="center"
             app:layout_constraintStart_toEndOf="@id/line4"
             app:layout_constraintEnd_toStartOf="@id/line6"
             app:layout_constraintTop_toBottomOf="@id/prof_points"
@@ -138,8 +141,8 @@
             android:textColor="#000000"
             android:text="Rank"
             android:textSize="16sp"
-            android:paddingHorizontal="50dp"
-            app:layout_constraintTop_toBottomOf="@id/line3"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/prof_rank"
             app:layout_constraintStart_toEndOf="@id/line5"
             app:layout_constraintEnd_toEndOf="parent"/>
 
