--- a/app/src/main/res/layout/fragment_quiz_1.xml
+++ b/app/src/main/res/layout/fragment_quiz_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".couseActivities.Quiz_1">
+    tools:context=".couse1Activities.Quiz_1">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
