--- a/app/src/main/res/layout/activity_awareness_room_fourth.xml
+++ b/app/src/main/res/layout/activity_awareness_room_fourth.xml
@@ -6,9 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".AwarenessRoom_fourth">
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#d2fcfa"
@@ -69,21 +66,10 @@
             android:layout_height="6.6dp"
             android:layout_marginStart="11.22dp"
             android:layout_marginTop="3.3dp"
-            android:background="@drawable/rectangle_copy"
-            app:layout_constraintEnd_toStartOf="@id/fifth"
+            android:background="@drawable/rectangle"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/third"
             app:layout_constraintTop_toBottomOf="@+id/LessonName" />
-
-        <ImageView
-            android:id="@+id/fifth"
-            android:layout_width="26.39dp"
-            android:layout_height="6.6dp"
-            android:layout_marginStart="11.22dp"
-            android:layout_marginTop="3.3dp"
-            android:background="@drawable/rectangle_copy"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/fourth"
-            app:layout_constraintTop_toBottomOf="@id/LessonName" />
 
         <ImageView
             android:id="@+id/book_shelf"
