set click listeners to AwarenessRoom

--- a/app/src/main/res/layout/fragment_lesson4.xml
+++ b/app/src/main/res/layout/fragment_lesson4.xml
@@ -85,7 +85,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Lesson Name"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:paddingHorizontal="50dp"
+            android:text="Improving your self-awareness"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guidelineTop" />
@@ -97,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Lesson 4"
-            app:layout_constraintEnd_toStartOf="@id/lessonName_textView"
+            app:layout_constraintEnd_toStartOf="@+id/lesson1_layout"
             app:layout_constraintStart_toStartOf="@id/progressImage_imageView"
             app:layout_constraintTop_toBottomOf="@id/progressImage_imageView" />
 
@@ -106,9 +109,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="@+id/lessonName_textView"
-            app:layout_constraintStart_toStartOf="@+id/lessonName_textView"
-            app:layout_constraintTop_toBottomOf="@+id/lessonName_textView">
+            app:layout_constraintBottom_toTopOf="@+id/lessonSubtitle_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+           >
 
             <TextView
                 android:id="@+id/progressOne_textView"
