--- a/app/src/main/res/layout/fragment_refrence.xml
+++ b/app/src/main/res/layout/fragment_refrence.xml
@@ -147,15 +147,16 @@
 
         </LinearLayout>
 
-        <!-- TODO embed youtube video instead of image-->
-        <ImageView
+        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+            android:id="@+id/youtube_videoPlayer5"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@mipmap/ic_launcher"
+            app:showFullScreenButton="false"
+            app:layout_constraintTop_toTopOf="@id/guidelineStartVideo"
             app:layout_constraintBottom_toBottomOf="@id/guidelineEndVideo"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guidelineStartVideo" />
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
         <TextView
             android:layout_width="0dp"
