Fixed a bug in lesson 2 youtube API

--- a/app/src/main/res/layout/fragment_lesson3_2.xml
+++ b/app/src/main/res/layout/fragment_lesson3_2.xml
@@ -143,7 +143,7 @@
         </LinearLayout>
 
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-            android:id="@+id/youtube_videoPlayer"
+            android:id="@+id/youtube_videoPlayer3"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:showFullScreenButton="false"
